@@ -38,7 +38,6 @@ import com.axelor.apps.stock.exception.StockExceptionMessage;
 import com.axelor.apps.stock.service.StockLocationLineService;
 import com.axelor.apps.stock.service.StockLocationService;
 import com.axelor.apps.stock.service.StockMoveLineService;
-import com.axelor.apps.stock.service.TrackingNumberConfigurationService;
 import com.axelor.auth.AuthUtils;
 import com.axelor.db.mapper.Mapper;
 import com.axelor.i18n.I18n;
@@ -120,6 +119,7 @@ public class StockMoveLineController {
     response.setValues(clearedStockMoveLineMap);
   }
 
+  @SuppressWarnings("unchecked")
   public void splitStockMoveLineByTrackingNumber(ActionRequest request, ActionResponse response) {
     Context context = request.getContext();
 
@@ -128,14 +128,13 @@ public class StockMoveLineController {
         response.setAlert(
             I18n.get(StockExceptionMessage.TRACK_NUMBER_WIZARD_NO_RECORD_ADDED_ERROR));
       } else {
-        @SuppressWarnings("unchecked")
+
         LinkedHashMap<String, Object> stockMoveLineMap =
             (LinkedHashMap<String, Object>) context.get("_stockMoveLine");
         Integer stockMoveLineId = (Integer) stockMoveLineMap.get("id");
         StockMoveLine stockMoveLine =
-            Beans.get(StockMoveLineRepository.class).find(new Long(stockMoveLineId));
+            Beans.get(StockMoveLineRepository.class).find(Long.valueOf(stockMoveLineId));
 
-        @SuppressWarnings("unchecked")
         ArrayList<LinkedHashMap<String, Object>> trackingNumbers =
             (ArrayList<LinkedHashMap<String, Object>>) context.get("trackingNumbers");
 
@@ -148,58 +147,68 @@ public class StockMoveLineController {
     }
   }
 
-  public void openTrackNumberWizard(ActionRequest request, ActionResponse response) {
+  public void openTrackNumberWizard(ActionRequest request, ActionResponse response)
+      throws AxelorException {
     Context context = request.getContext();
     StockMoveLine stockMoveLine = context.asType(StockMoveLine.class);
-    TrackingNumberConfigurationService trackingNumberConfigurationService =
-        Beans.get(TrackingNumberConfigurationService.class);
-    StockMove stockMove = null;
-    try {
-      if (context.getParent() != null
-          && context.getParent().get("_model").equals("com.axelor.apps.stock.db.StockMove")) {
-        stockMove = context.getParent().asType(StockMove.class);
-      } else if (stockMoveLine.getStockMove() != null
-          && stockMoveLine.getStockMove().getId() != null) {
-        stockMove = Beans.get(StockMoveRepository.class).find(stockMoveLine.getStockMove().getId());
-      }
-
-      boolean _hasWarranty = false, _isPerishable = false, _isSeqUsedForSerialNumber = false;
-      if (stockMoveLine.getProduct() != null) {
-        Product product = stockMoveLine.getProduct();
-        _hasWarranty = product.getHasWarranty();
-        _isPerishable = product.getIsPerishable();
-        TrackingNumberConfiguration trackingNumberConfiguration =
-            (TrackingNumberConfiguration)
-                Beans.get(ProductCompanyService.class)
-                    .get(
-                        product,
-                        "trackingNumberConfiguration",
-                        Optional.ofNullable(stockMoveLine.getStockMove())
-                            .map(StockMove::getCompany)
-                            .orElse(null));
-        if (trackingNumberConfiguration != null) {
-          _isSeqUsedForSerialNumber =
-              trackingNumberConfiguration.getUseTrackingNumberSeqAsSerialNbr();
-        }
-      }
-      response.setView(
-          ActionView.define(I18n.get(StockExceptionMessage.TRACK_NUMBER_WIZARD_TITLE))
-              .model(Wizard.class.getName())
-              .add("form", "stock-move-line-track-number-wizard-form")
-              .param("popup", "reload")
-              .param("show-toolbar", "false")
-              .param("show-confirm", "false")
-              .param("width", "large")
-              .param("popup-save", "false")
-              .context("_stockMove", stockMove)
-              .context("_stockMoveLine", stockMoveLine)
-              .context("_hasWarranty", _hasWarranty)
-              .context("_isPerishable", _isPerishable)
-              .context("_isSeqUsedForSerialNumber", _isSeqUsedForSerialNumber)
-              .map());
-    } catch (Exception e) {
-      TraceBackService.trace(response, e);
+    StockMove stockMove;
+    boolean fromStockMove;
+    if (context.getParent() != null
+        && StockMove.class.equals(context.getParent().getContextClass())) {
+      stockMove = context.getParent().asType(StockMove.class);
+      fromStockMove = true;
+    } else if (stockMoveLine.getStockMove() != null
+        && stockMoveLine.getStockMove().getId() != null) {
+      stockMove = Beans.get(StockMoveRepository.class).find(stockMoveLine.getStockMove().getId());
+      fromStockMove = false;
+    } else {
+      return;
     }
+
+    Product product = stockMoveLine.getProduct();
+    if (product == null) {
+      return;
+    }
+    TrackingNumberConfiguration trackingNumberConfiguration =
+        (TrackingNumberConfiguration)
+            Beans.get(ProductCompanyService.class)
+                .get(
+                    product,
+                    "trackingNumberConfiguration",
+                    Optional.ofNullable(stockMoveLine.getStockMove())
+                        .map(StockMove::getCompany)
+                        .orElse(null));
+    if (trackingNumberConfiguration == null) {
+      return;
+    }
+
+    String formName = "stock-move-line-create-tracking-number-wizard-form";
+    String title = I18n.get(StockExceptionMessage.TRACK_NUMBER_WIZARD_TITLE_1);
+
+    if ("stock-move-line-consumed-production-grid".equals(context.get("_viewName"))
+        || fromStockMove && stockMove.getTypeSelect() == StockMoveRepository.TYPE_INTERNAL
+        || (stockMove.getTypeSelect() == StockMoveRepository.TYPE_OUTGOING
+            && trackingNumberConfiguration.getIsSaleTrackingManaged()
+            && (trackingNumberConfiguration.getIsPurchaseTrackingManaged()
+                || trackingNumberConfiguration.getIsProductionTrackingManaged()))) {
+      formName = "stock-move-line-select-tracking-number-wizard-form";
+      title = I18n.get(StockExceptionMessage.TRACK_NUMBER_WIZARD_TITLE_2);
+    }
+    response.setView(
+        ActionView.define(title)
+            .model(Wizard.class.getName())
+            .add("form", formName)
+            .param("popup", "reload")
+            .param("show-toolbar", "false")
+            .param("show-confirm", "false")
+            .param("width", "large")
+            .param("popup-save", "false")
+            .context("_stockMove", stockMove)
+            .context("_stockMoveLine", stockMoveLine)
+            .context(
+                "_isSeqUsedForSerialNumber",
+                trackingNumberConfiguration.getUseTrackingNumberSeqAsSerialNbr())
+            .map());
   }
 
   @SuppressWarnings({"unchecked", "rawtypes"})
@@ -279,8 +288,8 @@ public class StockMoveLineController {
     Integer stockMoveLineId = (Integer) stockMoveLineMap.get("id");
     Integer stockMoveId = (Integer) stockMoveMap.get("id");
     StockMoveLine stockMoveLine =
-        Beans.get(StockMoveLineRepository.class).find(new Long(stockMoveLineId));
-    StockMove stockMove = Beans.get(StockMoveRepository.class).find(new Long(stockMoveId));
+        Beans.get(StockMoveLineRepository.class).find(Long.valueOf(stockMoveLineId));
+    StockMove stockMove = Beans.get(StockMoveRepository.class).find(Long.valueOf(stockMoveId));
 
     if (stockMoveLine == null
         || stockMoveLine.getProduct() == null
@@ -307,11 +316,9 @@ public class StockMoveLineController {
               ? detailStockLocationLine.getCurrentQty()
               : BigDecimal.ZERO;
       Map<String, Object> map = new HashMap<String, Object>();
-      map.put("trackingNumber", trackingNumber);
       map.put("trackingNumberSeq", trackingNumber.getTrackingNumberSeq());
       map.put("counter", BigDecimal.ZERO);
       map.put("warrantyExpirationDate", trackingNumber.getWarrantyExpirationDate());
-      map.put("perishableExpirationDate", trackingNumber.getPerishableExpirationDate());
       map.put("$availableQty", availableQty);
       map.put("$moveTypeSelect", stockMove.getTypeSelect());
       map.put("origin", trackingNumber.getOrigin());
